--- a/index.html
+++ b/index.html
@@ -3,152 +3,139 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solo Wear | Premium Fashion Pakistan</title>
-    <meta name="description" content="Solo Wear - Luxury fashion brand offering premium fabrics, exclusive designs, and fast delivery across Pakistan. Wear the legacy.">
-    <meta name="keywords" content="premium fashion, luxury clothing, pakistani fashion, designer wear, solo wear">
+    <title>Solo Wear | The Future of Luxury Fashion 2025</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Brand",
+        "name": "Solo Wear",
+        "description": "Ultra-premium luxury fashion brand creating timeless pieces for the modern individual.",
+        "url": "https://solowear.com",
+        "logo": "https://solowear.com/logo.png",
+        "sameAs": [
+            "https://instagram.com/solowear",
+            "https://facebook.com/solowear"
+        ],
+        "founder": {
+            "@type": "Person",
+            "name": "Alex Sterling"
+        },
+        "foundingDate": "2022"
+    }
+    </script>
 </head>
 <body>
     <!-- Navigation -->
     <nav class="navbar">
-        <div class="nav-container">
-            <a href="index.html" class="logo">SOLO WEAR</a>
-            <div class="nav-menu">
-                <a href="index.html" class="nav-link">Home</a>
-                <a href="shop.html" class="nav-link">Shop</a>
-                <a href="about.html" class="nav-link">About</a>
-                <a href="cart.html" class="nav-link cart-icon">
-                    <i class="fas fa-shopping-bag"></i>
-                    <span class="cart-count">0</span>
-                </a>
-                <a href="admin.html" class="nav-link admin-link">
-                    <i class="fas fa-lock"></i>
-                </a>
-            </div>
-            <button class="mobile-menu-btn">
-                <i class="fas fa-bars"></i>
+        <div class="container">
+            <a href="index.html" class="logo">SOLO<span>WEAR</span></a>
+            <ul class="nav-links">
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="shop.html">Collection</a></li>
+                <li><a href="#about">Story</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="cart.html" class="cart-icon"><i class="fas fa-shopping-bag"></i> <span id="cart-count">0</span></a></li>
+            </ul>
+            <button class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
             </button>
         </div>
     </nav>
 
     <!-- Hero Section -->
     <section class="hero">
-        <div class="hero-overlay"></div>
-        <video autoplay muted loop class="hero-video">
-            <source src="https://assets.mixkit.co/videos/preview/mixkit-fashion-model-in-a-modern-studio-39876-large.mp4" type="video/mp4">
-        </video>
         <div class="hero-content">
-            <h1 class="hero-title animate-slide-up">Wear the Legacy</h1>
-            <p class="hero-subtitle animate-slide-up">Premium Fashion Redefined for the Modern Elite</p>
-            <a href="shop.html" class="btn-gold animate-slide-up">Explore Collection</a>
+            <h1 class="hero-title animate-slide-up">The Future of <span class="gold-text">Luxury</span></h1>
+            <p class="hero-subtitle animate-slide-up delay-1">Crafted for the individual. Designed for eternity.</p>
+            <a href="shop.html" class="btn btn-primary animate-slide-up delay-2">Explore Collection</a>
+        </div>
+        <div class="scroll-indicator">
+            <i class="fas fa-chevron-down"></i>
         </div>
     </section>
 
-    <!-- Features Section -->
-    <section class="features">
+    <!-- Featured Collection -->
+    <section class="featured container">
+        <div class="section-header">
+            <h2>2025 Collection</h2>
+            <p>Timeless pieces redefining modern luxury</p>
+        </div>
+        <div class="products-grid" id="featured-products">
+            <!-- Products will be loaded via JavaScript -->
+        </div>
+    </section>
+
+    <!-- Brand Story -->
+    <section class="story" id="about">
         <div class="container">
-            <h2 class="section-title">Why Solo Wear</h2>
-            <div class="features-grid">
-                <div class="feature-card animate-fade">
-                    <div class="feature-icon">
-                        <i class="fas fa-gem"></i>
-                    </div>
-                    <h3>Premium Fabric</h3>
-                    <p>Only the finest materials sourced from Italy, Japan, and Switzerland</p>
-                </div>
-                <div class="feature-card animate-fade">
-                    <div class="feature-icon">
-                        <i class="fas fa-shipping-fast"></i>
-                    </div>
-                    <h3>Fast Delivery</h3>
-                    <p>Express shipping across Pakistan with 24-hour delivery in major cities</p>
-                </div>
-                <div class="feature-card animate-fade">
-                    <div class="feature-icon">
-                        <i class="fas fa-pen-fancy"></i>
-                    </div>
-                    <h3>Exclusive Designs</h3>
-                    <p>Limited edition pieces crafted by our award-winning design team</p>
-                </div>
+            <div class="story-content">
+                <h2>The Solo Philosophy</h2>
+                <p>In a world of mass production, we choose the path of intentional craftsmanship. Each Solo Wear piece is a statement of individuality, created with premium materials and uncompromising attention to detail.</p>
+                <p>Our 2025 collection represents a fusion of timeless design and cutting-edge sustainable practices, setting a new standard for luxury fashion.</p>
+                <a href="shop.html" class="btn btn-outline">Discover Our Process</a>
             </div>
         </div>
     </section>
 
-    <!-- New Arrivals -->
-    <section class="new-arrivals">
-        <div class="container">
-            <div class="section-header">
-                <h2 class="section-title">New Arrivals</h2>
-                <a href="shop.html" class="view-all">View All →</a>
-            </div>
-            <div class="products-grid" id="newArrivalsGrid">
-                <!-- Products loaded from Firebase -->
-                <div class="loading">Loading exclusive collection...</div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Newsletter -->
-    <section class="newsletter">
-        <div class="container">
-            <div class="newsletter-content">
-                <h2>Join the Elite Club</h2>
-                <p>Get exclusive access to pre-launch collections and members-only discounts</p>
-                <form class="newsletter-form">
-                    <input type="email" placeholder="Enter your email" required>
-                    <button type="submit" class="btn-gold">Subscribe</button>
-                </form>
-            </div>
-        </div>
-    </section>
+    <!-- WhatsApp Button -->
+    <a href="https://wa.me/923121399449" class="whatsapp-btn" target="_blank" aria-label="Contact us on WhatsApp">
+        <i class="fab fa-whatsapp"></i>
+    </a>
 
     <!-- Footer -->
-    <footer class="footer">
+    <footer class="footer" id="contact">
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <h3>SOLO WEAR</h3>
-                    <p>Redefining luxury fashion in Pakistan since 2010. Experience craftsmanship like never before.</p>
+                    <h3>SOLO<span>WEAR</span></h3>
+                    <p>Redefining luxury fashion for the modern era. Crafted with precision, designed for eternity.</p>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-tiktok"></i></a>
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-pinterest"></i></a>
                     </div>
                 </div>
                 <div class="footer-col">
                     <h4>Quick Links</h4>
-                    <a href="index.html">Home</a>
-                    <a href="shop.html">Shop</a>
-                    <a href="about.html">About Us</a>
-                    <a href="cart.html">Cart</a>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="shop.html">Collection</a></li>
+                        <li><a href="#about">Our Story</a></li>
+                        <li><a href="admin.html">Admin Login</a></li>
+                    </ul>
                 </div>
                 <div class="footer-col">
                     <h4>Support</h4>
-                    <a href="#">Contact Us</a>
-                    <a href="#">Shipping Policy</a>
-                    <a href="#">Returns & Exchanges</a>
-                    <a href="#">Privacy Policy</a>
+                    <ul>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Shipping Information</a></li>
+                        <li><a href="#">Size Guide</a></li>
+                        <li><a href="#">Care Instructions</a></li>
+                    </ul>
                 </div>
                 <div class="footer-col">
                     <h4>Contact Info</h4>
-                    <p><i class="fas fa-map-marker-alt"></i> The Solo Tower, DHA Phase 6, Karachi</p>
-                    <p><i class="fas fa-phone"></i> +92 21 34567890</p>
-                    <p><i class="fas fa-envelope"></i> info@solo-wear.com</p>
+                    <ul>
+                        <li><i class="fas fa-map-marker-alt"></i> Luxury District, Karachi, Pakistan</li>
+                        <li><i class="fas fa-phone"></i> +92 312 1399449</li>
+                        <li><i class="fas fa-envelope"></i> info@solowear.com</li>
+                    </ul>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Solo Wear. All rights reserved. | <a href="admin.html" class="admin-login">Admin Login</a></p>
+                <p>&copy; 2025 Solo Wear. All rights reserved. <strong class="no-returns">No Returns or Exchanges. All Sales Final.</strong></p>
             </div>
         </div>
     </footer>
 
-    <!-- WhatsApp Button will be injected by JavaScript -->
-    
-    <script type="module" src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
