--- a/shop.html
+++ b/shop.html
@@ -3,111 +3,155 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop Collection | Solo Wear</title>
-    <meta name="description" content="Browse Solo Wear's exclusive collection of luxury fashion. Premium fabrics, exclusive designs, and fast delivery.">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <title>Solo Wear | The Collection 2025</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "ItemList",
+        "name": "Solo Wear 2025 Collection",
+        "description": "Ultra-premium luxury fashion collection",
+        "url": "https://solowear.com/shop.html",
+        "numberOfItems": "12",
+        "itemListOrder": "https://schema.org/ItemListOrderDescending"
+    }
+    </script>
 </head>
 <body>
-    <!-- Navigation (Same as index.html) -->
+    <!-- Navigation -->
     <nav class="navbar">
-        <div class="nav-container">
-            <a href="index.html" class="logo">SOLO WEAR</a>
-            <div class="nav-menu">
-                <a href="index.html" class="nav-link">Home</a>
-                <a href="shop.html" class="nav-link active">Shop</a>
-                <a href="about.html" class="nav-link">About</a>
-                <a href="cart.html" class="nav-link cart-icon">
-                    <i class="fas fa-shopping-bag"></i>
-                    <span class="cart-count">0</span>
-                </a>
-                <a href="admin.html" class="nav-link admin-link">
-                    <i class="fas fa-lock"></i>
-                </a>
-            </div>
-            <button class="mobile-menu-btn">
-                <i class="fas fa-bars"></i>
+        <div class="container">
+            <a href="index.html" class="logo">SOLO<span>WEAR</span></a>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="shop.html" class="active">Collection</a></li>
+                <li><a href="index.html#about">Story</a></li>
+                <li><a href="index.html#contact">Contact</a></li>
+                <li><a href="cart.html" class="cart-icon"><i class="fas fa-shopping-bag"></i> <span id="cart-count">0</span></a></li>
+            </ul>
+            <button class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
             </button>
         </div>
     </nav>
 
     <!-- Shop Header -->
-    <section class="shop-header">
+    <section class="page-header">
         <div class="container">
-            <h1 class="page-title">The Collection</h1>
-            <p class="page-subtitle">Curated Luxury for the Discerning Individual</p>
+            <h1>The Collection</h1>
+            <p>Curated luxury for the modern individual</p>
         </div>
     </section>
 
-    <!-- Filter Bar -->
-    <section class="filter-bar">
-        <div class="container">
-            <div class="filter-content">
-                <div class="filter-left">
-                    <span>Showing <span id="productCount">12</span> products</span>
+    <!-- Filter & Sort -->
+    <section class="shop-controls container">
+        <div class="controls-grid">
+            <div class="filter-section">
+                <button class="filter-btn"><i class="fas fa-filter"></i> Filter</button>
+                <div class="filter-dropdown">
+                    <div class="filter-option">
+                        <h4>Category</h4>
+                        <select id="category-filter">
+                            <option value="all">All Categories</option>
+                            <option value="t-shirt">T-Shirts</option>
+                            <option value="shirt">Shirts</option>
+                            <option value="jacket">Jackets</option>
+                            <option value="pants">Pants</option>
+                            <option value="accessory">Accessories</option>
+                        </select>
+                    </div>
+                    <div class="filter-option">
+                        <h4>Price Range</h4>
+                        <select id="price-filter">
+                            <option value="all">All Prices</option>
+                            <option value="0-5000">Under PKR 5,000</option>
+                            <option value="5000-10000">PKR 5,000 - 10,000</option>
+                            <option value="10000-20000">PKR 10,000 - 20,000</option>
+                            <option value="20000+">Over PKR 20,000</option>
+                        </select>
+                    </div>
                 </div>
-                <div class="filter-right">
-                    <select id="sortFilter" class="filter-select">
-                        <option value="newest">Newest First</option>
-                        <option value="price-low">Price: Low to High</option>
-                        <option value="price-high">Price: High to Low</option>
-                    </select>
-                </div>
+            </div>
+            <div class="sort-section">
+                <select id="sort-options">
+                    <option value="newest">Newest First</option>
+                    <option value="price-low">Price: Low to High</option>
+                    <option value="price-high">Price: High to Low</option>
+                    <option value="name">Name A-Z</option>
+                </select>
             </div>
         </div>
     </section>
 
     <!-- Products Grid -->
-    <section class="products-section">
-        <div class="container">
-            <div class="products-grid" id="productsGrid">
-                <!-- Products loaded from Firebase -->
-                <div class="loading">Loading our collection...</div>
-            </div>
+    <section class="shop-products container">
+        <div class="products-grid" id="shop-products">
+            <!-- Products loaded via JavaScript -->
+        </div>
+        <div class="loading-spinner" id="loading-spinner">
+            <div class="spinner"></div>
+            <p>Loading luxury pieces...</p>
         </div>
     </section>
 
-    <!-- Footer (Same as index.html) -->
+    <!-- WhatsApp Button -->
+    <a href="https://wa.me/923121399449" class="whatsapp-btn" target="_blank" aria-label="Contact us on WhatsApp">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+
+    <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <h3>SOLO WEAR</h3>
-                    <p>Redefining luxury fashion in Pakistan since 2010.</p>
+                    <h3>SOLO<span>WEAR</span></h3>
+                    <p>Redefining luxury fashion for the modern era. Crafted with precision, designed for eternity.</p>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-tiktok"></i></a>
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-pinterest"></i></a>
                     </div>
                 </div>
                 <div class="footer-col">
                     <h4>Quick Links</h4>
-                    <a href="index.html">Home</a>
-                    <a href="shop.html">Shop</a>
-                    <a href="about.html">About Us</a>
-                    <a href="cart.html">Cart</a>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="shop.html">Collection</a></li>
+                        <li><a href="index.html#about">Our Story</a></li>
+                        <li><a href="admin.html">Admin Login</a></li>
+                    </ul>
                 </div>
                 <div class="footer-col">
                     <h4>Support</h4>
-                    <a href="#">Contact Us</a>
-                    <a href="#">Shipping Policy</a>
-                    <a href="#">Returns & Exchanges</a>
-                    <a href="#">Privacy Policy</a>
+                    <ul>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Shipping Information</a></li>
+                        <li><a href="#">Size Guide</a></li>
+                        <li><a href="#">Care Instructions</a></li>
+                    </ul>
                 </div>
                 <div class="footer-col">
                     <h4>Contact Info</h4>
-                    <p><i class="fas fa-map-marker-alt"></i> The Solo Tower, DHA Phase 6, Karachi</p>
-                    <p><i class="fas fa-phone"></i> +92 21 34567890</p>
-                    <p><i class="fas fa-envelope"></i> info@solo-wear.com</p>
+                    <ul>
+                        <li><i class="fas fa-map-marker-alt"></i> Luxury District, Karachi, Pakistan</li>
+                        <li><i class="fas fa-phone"></i> +92 312 1399449</li>
+                        <li><i class="fas fa-envelope"></i> info@solowear.com</li>
+                    </ul>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Solo Wear. All rights reserved. | <a href="admin.html" class="admin-login">Admin Login</a></p>
+                <p>&copy; 2025 Solo Wear. All rights reserved. <strong class="no-returns">No Returns or Exchanges. All Sales Final.</strong></p>
             </div>
         </div>
     </footer>
 
-    <script type="module" src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
